# run-edgetest-action

./: .gitignore  CONTRIBUTING.md  DEVELOPER.md  LICENSE  README.md  action.yml  requirements.txt  setup.cfg
.github/workflows/: CODEOWNERS  test-action.yml
tests/: test_main.py
tests/toy_package/: setup.cfg
toy_package/: __init__.py
