[metadata]
name = toy_package
version = 0.1.0
description = Fake description
python_requires =
    >=3.9.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    pandas<=2.0.0

[options.extras_require]
tests =
    pytest

[edgetest]
python_version = 3.11
extras =
    tests
deps =
    pip-tools
